[gd_scene load_steps=8 format=2]

[ext_resource path="res://diagetics/enemies/trigger/trigger.gd" type="Script" id=1]
[ext_resource path="res://diagetics/enemies/trigger/trigger_trigger.png" type="Texture" id=2]
[ext_resource path="res://diagetics/enemies/trigger/trigger_shadow.png" type="Texture" id=3]
[ext_resource path="res://diagetics/enemies/trigger/trigger_area.gd" type="Script" id=4]
[ext_resource path="res://diagetics/enemies/pulse/pulse_attack.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 24.0

[node name="trigger" type="Node2D" index="0"]

script = ExtResource( 1 )
attack = false

[node name="animated_sprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="shadow" type="Sprite" parent="animated_sprite" index="0"]

modulate = Color( 1, 1, 1, 0.276235 )
position = Vector2( 0.5, 0 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="trigger_area" type="Area2D" parent="." index="1"]

position = Vector2( 2.5, -12 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 16
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="collision_shape_2d" type="CollisionShape2D" parent="trigger_area" index="0"]

shape = SubResource( 2 )

[node name="pulse_attack" parent="." index="2" instance=ExtResource( 5 )]

[node name="attack_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false


